--- a/app/src/main/res/layout/activity_networking_result.xml
+++ b/app/src/main/res/layout/activity_networking_result.xml
@@ -9,16 +9,8 @@
         android:id="@+id/tv_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
+        android:textSize="20sp"
         android:layout_centerHorizontal="true">
     </TextView>
-
-    <ImageView
-        android:id="@+id/img_result"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:srcCompat="@tools:sample/backgrounds/scenic"
-
-        android:layout_below="@+id/tv_result"
-        android:layout_centerHorizontal="true"/>
-
 </RelativeLayout>
